# zed-i18n

./: .gitignore  AGENTS.md  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: i18n-publish-existing.yml  i18n-release.yml  i18n-update-packaging.yml
catalog/: en-US.json
config/: distribution.toml  project.toml
docs/readme/: cs-CZ.md  de-DE.md  es-ES.md  fr-FR.md  it-IT.md  ja-JP.md  ko-KR.md  pl-PL.md  pt-BR.md  ru-RU.md  tr-TR.md  zh-CN.md  zh-TW.md
manifest/: ui-strings.json
prompts/commands/: translation-audit.md  translation-review-new-keys.md  translation-review.md  translation-start-new-keys.md  translation-start.md
prompts/translation/: TEMPLATE.md  cs-CZ.md  de-DE.md  es-ES.md  fr-FR.md  it-IT.md  ja-JP.md  ko-KR.md  pl-PL.md  pt-BR.md  ru-RU.md  tr-TR.md  vscode-glossary-terms.md  zh-CN.md  zh-TW.md
tests/: test_apply.py  test_audit.py  test_ci_release.py  test_cli.py  test_config.py  test_context_groups.py  test_distribution.py  test_extract.py  test_packaging.py  test_rust_strings.py  test_translation_checks.py  test_translation_pipeline.py  test_translation_prompt_contracts.py  test_validate.py  test_vscode_loc.py  test_zed_patch_contracts.py  test_zed_source.py
tools/: __init__.py
tools/zed_i18n/: apply.py  ci_release.py  cli.py  config.py  context_groups.py  distribution.py  extract.py  packaging.py  rust_strings.py  translation_checks.py  translation_pipeline.py  (+3 more)
translations/: cs-CZ.json  de-DE.json  es-ES.json  fr-FR.json  it-IT.json  ja-JP.json  ko-KR.json  pl-PL.json  pt-BR.json  ru-RU.json  tr-TR.json  zh-CN.json  zh-TW.json
(+13 files in other folders)
